--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@influxdata/influxdb3-client": "^0.5.0",
     "apache-arrow": "^14.0.1",
     "dotenv": "^16.3.1",
+    "greptime": "^0.3.3",
     "nats": "^2.18.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
